@@ -1,6 +1,6 @@
 % File src/library/stats/man/model.tables.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2013 R Core Team
+% Copyright 1995-2015 R Core Team
 % Distributed under GPL 2 or later
 
 \name{model.tables}
